--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socket.io-redis": "^5.2.0"
   }
 }
