--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cluster": "^0.7.7",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
