--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "socket.io-redis": "^5.2.0"
   }
 }
